@@ -1,3 +1,7 @@
+2009-06-06  Manuel Cerón  <ceronman@gmail.com>
+
+	* MainWindow.cs: Using UndoableTool when creation
+
 2009-06-04  Manuel Cerón  <ceronman@gmail.com>
 
 	* MainWindow.cs: Added Undo and Redo actions
